# esp32-wifi-http-server-ota

./: .gitignore  CMakeLists.txt  README.md  activate-esp-idf.sh  partitions.csv  sdkconfig
backups/: http_server.backup.h
components/aws_iot/: CMakeLists.txt  Kconfig
main/: CMakeLists.txt  Kconfig.projbuild  app_nvs.c  app_nvs.h  aws_iot.c  aws_iot.h  coding_style.c  coding_style.h  dht11.c  dht11.h  http_handlers_ap_ssid.c  http_handlers_ap_ssid.h  http_handlers_ota.c  http_handlers_ota.h  http_handlers_sensor.c  http_handlers_sensor.h  http_handlers_sntp.c  http_handlers_sntp.h  http_handlers_static.c  http_handlers_static.h  http_handlers_wifi.c  http_handlers_wifi.h  http_server.c  http_server.h  http_server_monitor.c  http_server_monitor.h  main.c  rgb_led.c  rgb_led.h  rgb_led_main.c  sntp_time_sync.c  sntp_time_sync.h  tasks_common.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
main/webpage/: app.css  app.js  index.html
